src/components/Navigation/Navigation.scss
@import "styles/_variables.scss";
@import "styles/_media.scss";

.header-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 1;
}

.navigation {
    width: 100%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
    align-content: space-around;

    @include md {
        height: 100%;
        max-height: 100%;
    }

    &__logowrap {
        flex: 0 0 auto;
    }

    &__logo {
        flex: 0 0 auto;
        font-family: "Glow Better";
        font-weight: normal;
        text-align: center;
        line-height: 1;
        color: white;
        margin: 0 auto;
        font-size: 36px;

        @include md {
            margin: 6px auto 0;
            font-size: 46px;
        }
    }

    &__sublogo {
        flex: 0 0 auto;
        font-family: "Glow Better Script";
        font-weight: normal;
        text-align: right;
        font-size: 20px;
        line-height: 1;
        color: $accent-medium;
        margin-right: 3%;

        @include md {
            font-size: 2vw;
        }
    }
}

.canvas-wrapper {
    width: 100%;

    canvas {
        width: 100%;
        height: 100%;
    }
}

.p5Canvas {
    display: block;
}

.navinfo {
    flex: 0 0 auto;
    display: grid;
    grid-template-columns: minmax(0, 2fr) minmax(0, 3fr);
    grid-template-rows: auto auto;
    color: white;
    font-family: "Karla";
    font-weight: bold;

    @include sm {
        padding-bottom: 0;
    }

    &__root,
    &__scaleclass {
        position: relative;
        text-align: center;
        display: flex;
        align-items: center;
        justify-content: center;

        &>h5 {
            position: absolute;
            margin: 0;
            color: black;
            font-size: 0.5rem;
            top: 0.1rem;
            left: 0.25rem;
        }
    }

    &__root {
        color: black;
        background-color: white;
        border-top: 3px solid white;
        border-left: 3px solid white;
        border-radius: 9px 0 0 0;
        font-size: 1.5rem;
    }

    &__scaleclass {
        border-top: 3px solid white;
        border-right: 3px solid white;
        border-radius: 0 9px 0 0;
        font-size: 1.2rem;

        &>h5 {
            color: white;
        }
    }

    &__options {
        grid-column: span 2;
        display: flex;
        align-items: center;
        justify-content: space-around;
        border: 3px solid white;
        border-radius: 0 0 9px 30px;
        padding: 2px 0;
    }

    &__option {
        padding: 3px;
        display: flex;
        align-items: center;

        &>label {
            font-size: 1.2rem;
        }

        &>* {
            display: inline-block;
        }
    }
}

